...
                        android:layout_marginEnd="10dp"
                        android:text="Blocked"
                        android:textSize="12sp"
                        app:backgroundTint="@color/teal_200" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_out_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/action_sign_out"
                        android:textSize="12sp"
                        app:backgroundTint="@color/teal_200" />
...
