<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/navigation_profile"
            android:icon="@drawable/unknown_user"
            android:enabled="true"
            android:id="@+id/navigation_profile" />
    <item
            android:title="@string/navigation_feed"
            android:icon="@drawable/home"
            android:enabled="true"
            android:id="@+id/navigation_feed" />

    <item
            android:title="@string/navigation_map"
...
