...
            android:clickable="true"
            android:contentDescription="@string/create_activity_content_desc"
            app:layout_constraintBottom_toBottomOf="@id/fragment_container_view"
            app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            app:menu="@menu/bottom_nav"
            android:background="?android:attr/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/purple_200"
...
